Task-3 [Traffic Routing user agent]/1-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
  namespace: default
spec:
  hosts:
  - "onlineboutique.example.com"
  gateways:
  - my-gateway
  http:
  - match:
    - headers:
        user-agent:
          regex: '.*Firefox.*'
    route:
    - destination:
        port:
          number: 80
        subset: v2
        host: frontend.default.svc.cluster.local
  - match:
    - headers:
        user-agent:
          regex: '.*Chrome.*'
    route:
    - destination:
        port:
          number: 80
        subset: v1
        host: frontend.default.svc.cluster.local
  - route:
    - destination:
        port:
          number: 80
        subset: v1
        host: frontend.default.svc.cluster.local
      weight: 50

    - destination:
        port:
          number: 80
        subset: v2
        host: frontend.default.svc.cluster.local
      weight: 50
